TASK: Align the brandLogo correctly to the top boundary of it's parent

--- a/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Utilities/_Brand.scss
+++ b/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Utilities/_Brand.scss
@@ -40,6 +40,7 @@
 	width: 330px;
 	height: 160px;
 	fill: brand('primary');
+	vertical-align: top;
 }
 .u-brandLogo--bright {
 	fill: #FFF;
